# kampff-skills

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md
.github/: FUNDING.yml  dependabot.yml
collectors/: README.md  pyproject.toml
collectors/kampff_collect/: __init__.py  adapter_base.py  auth_setup.py  cli.py  models.py  normalize.py  pipeline.py  registry.py
collectors/kampff_collect.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
collectors/kampff_collect/adapters/: __init__.py  file_import.py  playwright.py  rest.py
docs/: RUN-INPUT.md  collection-targets.md  collectors-generic.md  collectors.md  community-member-pipeline.md  community-public-collect.md  demo-kampff-walkthrough.html  input-schema.md  launch-copy.md  lenses-cia-sat.md  lenses-clinical-psych.md  lenses-mbti.md  platform-login-harvest.md  prebuilt-platforms.md  report-analysis.schema.md  report-template.md  sample-analysis.json  sample-community-report.html  sample-community-report.md  sample-input.json  sample-output.md  sample-targets-sns.json  sample-targets.json  spectrograph.md  targets.template.json  usage.md
kampff/: SKILL.md
kampff/references/: collection-honesty.md  community-member-pipeline.md  github-smoke.md  human-like-collect.md  report-template.md  (+2 more)
scripts/: enrich_seed_temporal.py  expand_handles_maigret.py  finalize_cross_progress.py  finalize_full_cohort.py  human_browse.py  push-github.ps1  rebuild_cross_from_cohort.py  render_demo_reel.py  render_kampff_report.py  thread_actor_analyze.py  thread_actor_cohort.py
(+1 files in other folders)
