[project]
name = "kampff-collect"
version = "0.1.0"
description = "Generic config-driven collector for kampff bundles"
requires-python = ">=3.10"
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
rest = ["httpx>=0.27", "jinja2>=3.1"]
playwright = ["playwright>=1.40"]
all = ["kampff-collect[rest,playwright]"]

[project.scripts]
kampff-collect = "kampff_collect.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kampff_collect*"]